--- a/package.json
+++ b/package.json
@@ -1,10 +1,44 @@
 {
-  "name": "effects-vdom",
-  "version": "0.3.0",
+  "name": "@boazblake/algebraic-js",
+  "version": "1.0.0",
+  "description": "A tiny TEA-style runtime with explicit algebraic effects over a fast virtual DOM",
   "type": "module",
   "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
+  "author": "Boaz Blake <boazblake@gmail.com> (https://boazblake.github.io/identity/)",
+  "license": "MIT",
+  "keywords": [
+    "algebraic-effects",
+    "tea",
+    "elm-architecture",
+    "virtual-dom",
+    "vdom",
+    "functional-programming",
+    "fp",
+    "monad",
+    "adt",
+    "reactive",
+    "ui-framework",
+    "hyperscript"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/boazblake/algebraic-js.git"
+  },
+  "bugs": {
+    "url": "https://github.com/boazblake/algebraic-js/issues"
+  },
+  "homepage": "https://github.com/boazblake/algebraic-js#readme",
+  "files": [
+    "dist",
+    "README.md",
+    "LICENSE"
+  ],
   "exports": {
-    ".": "./dist/index.js",
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.js"
+    },
     "./core/*": "./dist/core/*.js",
     "./adt/*": "./dist/adt/*.js",
     "./nativescript/*": "./dist/nativescript/*.js"
@@ -15,7 +49,9 @@
     "serve": "serve public",
     "lint": "oxlint . && eslint . --ext .ts,.js",
     "lint:fix": "oxlint --fix . && eslint --fix . --ext .ts,.js",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "prepublishOnly": "npm run build",
+    "prepack": "npm run build"
   },
   "devDependencies": {
     "@types/node": "^24.10.0",
@@ -28,5 +64,8 @@
     "prettier": "^3.6.2",
     "oxlint": "^1.16.0",
     "typescript": "^5.4.0"
+  },
+  "engines": {
+    "node": ">=16.0.0"
   }
 }
