adding basic demo app

--- a/demo/tsconfig.json
+++ b/demo/tsconfig.json
@@ -9,6 +9,7 @@
     "moduleResolution": "bundler",
     "strict": true,
     "skipLibCheck": true,
+    "allowImportingTsExtensions": true,
     // Add these for perfect editor + build alignment
     "baseUrl": ".",
     "paths": {
